gcc/testsuite/rust/rustc/ui/type-alias/issue-62305-self-assoc-ty.rs
type Alias = Self::Target;
// { dg-error ".E0433." "" { target *-*-* } .-1 }

fn main() {}

